--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "devDependencies": {
     "@types/node": "^17.0.24",
     "@vitejs/plugin-vue": "^2.3.1",
+    "autoprefixer": "^10.4.4",
+    "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
-    "vue-tsc": "^0.29.8"
+    "vite-plugin-windicss": "^1.8.4",
+    "vue-tsc": "^0.29.8",
+    "windicss": "^3.5.1"
   }
 }
