--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "lint:style": "stylelint --fix \"src/**/*.{css,scss}\"",
+    "lint:script": "eslint --ext .js,.ts --fix --quiet ./",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
+  },
+  "resolutions": {
+    "bin-wrapper": "npm:bin-wrapper-china"
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@amatlash/vite-plugin-stylelint": "^1.2.0",
     "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -24,16 +26,13 @@
     "eslint-plugin-vue": "^8.6.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
-    "stylelint": "^14.7.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-prettier": "^2.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
     "vite-plugin-eslint": "^1.4.0",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-windicss": "^1.8.4",
+    "vite-svg-loader": "^3.2.0",
     "vue-tsc": "^0.29.8",
     "windicss": "^3.5.1"
   }
